Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31470

Creator doesn't differentiate new build configs properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 15.0.0
    • Qt Creator 14.0.2, Qt Creator 15.0.0
    • None
    • Ubuntu 22.04 LTS
    • 84c754de6 (master)

      1. Create a new project using Creator's wizards.
        I used a Qt Widgets Application project. It doesn't matter whether it's based on qmake or CMake.
      2. Go to Projects mode, Build settings.
        The project has a build configuration named "Debug". Its build directory is "<source directory>/build/Desktop-Debug".
      3. Add a new build configuration of type "Debug". Give it the same name: "Debug".
        The new build configuration is automatically renamed to "Debug2" to differentiate it from the existing one. Still, it uses exactly the same build directory.

      The updated name of the build configuration should also be used for the build directory.

        For Gerrit Dashboard: QTCREATORBUG-31470
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes