ProjectExplorer: Ensure unique build config name earlier

So that the potentially corrected name will be used to derive the
initial build directory.
Also fix the uniqueName() function so that it does not generally allow to
re-use the current build config's name.

Fixes: QTCREATORBUG-31470
Change-Id: If69f3dd2da2ba6d14d40dd686f4e35c2946c0591
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: Robert Löhning <robert.loehning@qt.io>